--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -7,6 +7,18 @@ AM_CPPFLAGS = \
 	-include Python.h \
 	-include $(top_builddir)/enigma2_config.h
 
+if ENABLE_LIBEPLAYER3
+if ENABLE_MEDIAFWGSTREAMER
+AM_CPPFLAGS += \
+	-I$(top_srcdir)/../../tools/libeplayer3/include
+else
+AM_CPPFLAGS += \
+	-D__STDC_CONSTANT_MACROS \
+	-D__STDC_FORMAT_MACROS \
+	-I$(top_srcdir)/../../tools/eplayer3/include
+endif
+endif
+
 # initialize these, to be filled with targets in the included files
 noinst_LIBRARIES=
 BUILT_SOURCES=
